# responsive-navbar-in-flask

./: README.md  main.py  pyproject.toml
templates/: index.html  news.html  programme.html
